<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="#C52A2B"
                android:orientation="vertical" >
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/daishouhuo"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:text="@string/huansheng"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/white"
                    android:layout_marginLeft="10dp"
                    />
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="65dp"
                >
                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="20dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/app_name"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:src="@mipmap/address"
                    android:layout_alignParentLeft="true"
                    />

                <TextView
                    android:id="@+id/textview_phone"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="5dp"
                    android:layout_toRightOf="@+id/imageView1"
                    android:text="@string/zhouzhang"
                    android:textColor="#979596"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="5dp"
                    android:layout_toRightOf="@+id/textview_phone"
                    android:text="@string/shoujihaomaright"
                    android:textColor="#979596"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_alignLeft="@+id/textview_phone"
                    android:text="@string/guangxi"
                    android:textColor="#979596"
                    android:maxLines="2"
                    android:singleLine="false"
                    android:layout_below="@+id/textview_phone"
                    android:textSize="18sp" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="10dp"
                android:background="#F1F1F2" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                >
                <ImageView
                    android:id="@+id/imageView1_car"
                    android:layout_width="20dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/app_name"
                    android:layout_marginLeft="5dp"
                    android:src="@mipmap/car"
                    android:layout_alignParentLeft="true"
                    />

                <TextView
                    android:id="@+id/textview_car"
                    android:layout_width="80dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="5dp"
                    android:layout_toRightOf="@+id/imageView1_car"
                    android:text="@string/wuliugongsi"
                    android:textColor="#979596"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/textview_tiantiankuaidi"
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_toRightOf="@+id/textview_car"
                    android:text="@string/tiantiankuaidi"
                    android:textColor="#979596"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/textview_yundanhaoma"
                    android:layout_width="80dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_alignLeft="@+id/textview_car"
                    android:text="@string/yundanhaoma"
                    android:textColor="#979596"
                    android:layout_below="@+id/textview_car"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="130dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_toRightOf="@+id/textview_yundanhaoma"
                    android:layout_below="@+id/textview_tiantiankuaidi"
                    android:layout_alignLeft="@+id/textview_tiantiankuaidi"
                    android:text="@string/yundanbianhaonumber"
                    android:textColor="#979596"
                    android:textSize="16sp" />

                <Button
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/fuzidanhao"
                    android:background="@drawable/white_shape_button"
                    android:layout_marginLeft="5dp"
                    android:layout_alignParentRight="true"
                    android:textSize="16sp"
                    android:textColor="#4B4A4A"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_height="10dp"
                android:background="#F1F1F2" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                >
                <ImageView
                    android:id="@+id/imageView_zhangshandian"
                    android:layout_width="20dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="15dp"
                    android:contentDescription="@string/app_name"
                    android:src="@mipmap/home_selected"
                    android:layout_alignParentLeft="true"
                    />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="5dp"
                    android:layout_toRightOf="@+id/imageView_zhangshandian"
                    android:text="@string/zhangshandian"
                    android:textColor="#C3C3C3"
                    android:textSize="18sp" />

            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E1E1E1" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                >
                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_marginTop="5dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/app_name"
                    android:layout_marginLeft="15dp"
                    android:src="@mipmap/shopping1"
                    android:layout_alignParentLeft="true"
                    />
                <TextView
                    android:id="@+id/textview_dingdanbianhao"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignLeft="@+id/imageView2"
                    android:layout_below="@+id/imageView2"
                    android:text="@string/dingdanbianhao"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/number"
                    android:layout_toRightOf="@+id/textview_dingdanbianhao"
                    android:layout_alignTop="@+id/textview_dingdanbianhao"
                    />
                <TextView
                    android:id="@+id/textview_xiandanshijian"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignLeft="@+id/imageView2"
                    android:layout_below="@+id/textview_dingdanbianhao"
                    android:text="@string/xiadanshijian"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/dateheshijian"
                    android:layout_toRightOf="@+id/textview_xiandanshijian"
                    android:layout_alignTop="@+id/textview_xiandanshijian"/>
                <TextView
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_toRightOf="@+id/imageView2"
                    android:text="@string/shanqihetianqi"
                    android:textColor="#636363"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/textview_price"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_alignParentRight="true"
                    android:text="@string/pricebai"
                    android:textColor="#4C4A4B"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/textview_pricesingle_line"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/textview_price"
                    android:paddingTop="5dp"
                    android:text="@string/pricebaiershi"
                    android:textColor="#4C4A4B"
                    android:background="@drawable/textview_single_line"
                    android:textSize="18sp" />
                <TextView
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/textview_pricesingle_line"
                    android:text="@string/plus1"
                    android:textColor="#ADAEAE"
                    android:textSize="18sp" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="1dp"
                android:background="#E1E1E1" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                >
                <TextView
                    android:id="@+id/textview_yingfujine"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="8dp"
                    android:layout_alignParentLeft="true"
                    android:text="@string/yingfujine"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/pricebai"
                    android:layout_toRightOf="@+id/textview_yingfujine"
                    android:layout_alignTop="@+id/textview_yingfujine"
                    />
                <TextView
                    android:id="@+id/textview_shangpinyunfei"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignLeft="@+id/textview_yingfujine"
                    android:layout_below="@+id/textview_yingfujine"
                    android:text="@string/shangpinyunfei"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/priceshi"
                    android:layout_toRightOf="@+id/textview_shangpinyunfei"
                    android:layout_alignTop="@+id/textview_shangpinyunfei"/>
                <TextView
                    android:id="@+id/textview_dianpuheji"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:textColor="#A92D2C"
                    android:layout_alignLeft="@+id/textview_shangpinyunfei"
                    android:layout_below="@+id/textview_shangpinyunfei"
                    android:text="@string/dianpuheji"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/pricebaishi"
                    android:textColor="#A92D2C"
                    android:layout_toRightOf="@+id/textview_dianpuheji"
                    android:layout_alignTop="@+id/textview_dianpuheji"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E1E1E1" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                >
                <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/lianxikefu"
                    android:background="@drawable/red_shape_button"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentLeft="true"
                    android:textSize="16sp"
                    android:textColor="#A11D1E"/>
                <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/tuikuan"
                    android:background="@drawable/white_shape_button"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    android:textSize="16sp"
                    android:textColor="#504F4E"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="1dp"
                android:background="#E1E1E1" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                >
                <TextView
                    android:id="@+id/textview_zongji"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:textSize="18sp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="18dp"
                    android:layout_alignParentLeft="true"
                    android:text="@string/zhongji"/>
                <TextView
                    android:id="@+id/textview_zongjijine"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textSize="22sp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:textColor="#940000"
                    android:layout_toRightOf="@+id/textview_zongji"
                    android:text="@string/priceshi"/>
                <Button
                    android:layout_width="150dp"
                    android:layout_height="80dp"
                    android:text="@string/querenshouhuo"
                    android:background="#940000"
                    android:layout_alignParentRight="true"
                    android:textSize="22sp"
                    android:textColor="@color/white"/>
            </RelativeLayout>
</LinearLayout>
