<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/top_linearlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:id="@+id/top_relativelayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:background="#9A0000"
        android:orientation="horizontal" >
        <ImageView
            android:id="@+id/wodezhongxin_left"
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:contentDescription="@string/app_name"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@mipmap/btn_back_normal"
            />
        <TextView
            android:id="@+id/index_search_yaocaiwang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/xiugaimima"
            android:textColor="@color/white"
            android:textSize="22sp" />
        <TextView
            android:id="@+id/wodezhongxin_right"
            android:layout_width="45dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:textSize="20sp"
            android:text="@string/wancheng"
            android:textColor="@color/white"
            />


    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/yuanshimima"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/edittext_mima"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/qingshuruyuanshimima"
            android:layout_marginTop="5dp"
            android:textColorHint="#CDCDCD"
            android:inputType="textPassword"
            android:singleLine="true"
            android:background="@null"
            android:textSize="18sp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#BABABA" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/xinmima"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/edittext_xinmima"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/qingshuruxinshimima"
            android:layout_marginTop="5dp"
            android:textColorHint="#CDCDCD"
            android:inputType="textPassword"
            android:background="@null"
            android:textSize="18sp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#BABABA" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/zaicixinshimima"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/edittext_zaixinmima"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/zaicishurushimima"
            android:layout_marginTop="5dp"
            android:textColorHint="#CDCDCD"
            android:inputType="textPassword"
            android:background="@null"
            android:textSize="18sp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#BABABA" />
</LinearLayout>
